# software-rust-base

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  cfg.yml  clippy.toml  readme.md
src/: app.rs  app_test.rs  config.rs  main.rs
tests/: integration_test.rs
