[package]
name = "rust-base"
version = "1.0.0-beta"
edition = "2024"
rust-version = "1.93.0"

[lints.clippy]
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = {version = "0.20.0" , features = ["derive"]}

[lib]
name = "app"
path = "src/app.rs"

[[bin]]
name = "rs"
path = "src/main.rs"

[package.metadata.commands]
depcheck = "cargo +nightly udeps"
format = "cargo fmt --all"
lint = "cargo clippy --all-targets --all-features -- -D warnings"
typecheck = "cargo check"
audit-packages = "cargo audit --ignore RUSTSEC-2025-0055"
checks = "cargo cmd depcheck && cargo cmd format && cargo cmd lint && cargo cmd typecheck && cargo cmd audit-packages"
unit = "cargo test --lib"
integration = "cargo test --test integration_test"
cover = "cargo tarpaulin --skip-clean --exclude-files=src/{main,config}.rs --target-dir=target/coverage"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "cargo cmd checks && cargo cmd cover && cargo cmd review && git add -A && git cz && git push"

